--- a/Core.TaskProcessor/Core.TaskProcessor.csproj
+++ b/Core.TaskProcessor/Core.TaskProcessor.csproj
@@ -1,15 +1,34 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<Authors>Andreas Dominik Jung</Authors>
+		<Copyright>Andreas Dominik Jung</Copyright>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<PackageId>Core.TaskProcessor</PackageId>
+		<PackageTags>background-tasks scheduled-tasks background-jobs cronjob-scheduler</PackageTags>
+		<PackageReleaseNotes></PackageReleaseNotes>
+		<Description>.NET background task processor and scheduler</Description>
+		<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+		<Version>1.0.0</Version>
+		<PackageProjectUrl>https://github.com/coronabytes/taskprocessor</PackageProjectUrl>
+		<PublishRepositoryUrl>true</PublishRepositoryUrl>
+		<IncludeSymbols>true</IncludeSymbols>
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+		<RepositoryUrl>https://github.com/coronabytes/taskprocessor.git</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Cronos" Version="0.7.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.2" />
-    <PackageReference Include="StackExchange.Redis" Version="2.6.66" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Cronos" Version="0.7.1" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.2" />
+		<PackageReference Include="StackExchange.Redis" Version="2.6.70" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
+	</ItemGroup>
 
 </Project>
