--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,20 +13,23 @@ jobs:
   build:
     timeout-minutes: 20
     runs-on: ubuntu-latest
-    
-    strategy:
-      fail-fast: false
-      matrix:
-        dotnet:
-          - 8.x
 
     steps:
     - uses: actions/checkout@v3
+    - uses: actions/setup-node@master
+    
+    - name: npm install
+      working-directory: ./dashboard
+      run: npm install
+      
+    - name: npm build
+      working-directory: ./dashboard
+      run: npm run build
     
     - name: dotnet
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: ${{ matrix.dotnet }}
+        dotnet-version: 8.x
     
     - name: build
       run: dotnet build --configuration Release
