--- a/Core.TaskProcessor.Dashboard/Core.TaskProcessor.Dashboard.csproj
+++ b/Core.TaskProcessor.Dashboard/Core.TaskProcessor.Dashboard.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="static\*"/>
+  </ItemGroup>
+
+  <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
