--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "axios": "^1.6.5",
     "chart.js": "^4.4.1",
     "pinia": "^2.0.23",
     "roboto-fontface": "*",
