--- a/Core.TaskProcessor.SampleWebApi/Core.TaskProcessor.SampleWebApi.csproj
+++ b/Core.TaskProcessor.SampleWebApi/Core.TaskProcessor.SampleWebApi.csproj
@@ -1,19 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
+    <PackageReference Include="Scalar.AspNetCore" Version="1.2.35" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Core.TaskProcessor.Dashboard\Core.TaskProcessor.Dashboard.csproj" />
     <ProjectReference Include="..\Core.TaskProcessor\Core.TaskProcessor.csproj" />
   </ItemGroup>
 
