--- a/redis/docker-compose.yml
+++ b/redis/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
 
   redis:
@@ -12,17 +10,29 @@ services:
       - redis:/data
     command: redis-server --appendonly yes
     
+  valkey:
+    container_name: valkey
+    image: valkey/valkey:8.1-alpine
+    restart: unless-stopped
+    ports:
+      - 6380:6379
+    volumes:
+      - valkey:/data
+    command: valkey-server --appendonly yes
+    
   redisinsight:
     container_name: redisinsight
-    image: redislabs/redisinsight:latest
+    image: redis/redisinsight:latest
     restart: unless-stopped
     volumes:
-      - redisinsight:/db
+      - redisinsight:/data
     depends_on:
       - redis
+      - valkey
     ports:
-      - 8001:8001
+      - 5540:5540
 
 volumes:
   redis:
+  valkey:
   redisinsight:
